Add counterfactual figures

--- a/welfare_groups.ipynb
+++ b/welfare_groups.ipynb
@@ -2,12 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 6,
    "id": "c9d54c0f",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
+    "import numpy as np\n",
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt"
    ]
@@ -782,6 +783,449 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4aee1c9b",
+   "metadata": {},
+   "source": [
+    "# Counterfactual (Dist.)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a5c642c1",
+   "metadata": {},
+   "source": [
+    "## Tables"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c0a617f1",
+   "metadata": {},
+   "source": [
+    "$Note: (f) -2\\gamma_{med}, \\gamma_{large}; (i) 2\\gamma_{med}, -\\gamma_{large}$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "54a09355",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def assign_groups(Qbar_it, group):\n",
+    "    '''\n",
+    "    Assign group based on Qbar_it and the group thresholds;\n",
+    "    Greater size, larger group number\n",
+    "    '''\n",
+    "    groups = np.zeros(len(Qbar_it))\n",
+    "    for i, lb in enumerate(group):\n",
+    "        groups[Qbar_it >= lb] = int(i)\n",
+    "    return groups"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "0207fb13",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "File: data/[1, -2, 1, 1, 1, 1, 1]qs_pis.csv\n",
+      "   group         pi\n",
+      "0    0.0   5.088799\n",
+      "1    1.0  10.906598\n",
+      "2    2.0   0.353230\n",
+      "3    3.0   5.490936\n",
+      "4    4.0   2.034551\n",
+      "File: data/[1, 2, -1, 1, 1, 1, 1]qs_pis.csv\n",
+      "   group        pi\n",
+      "0    0.0  5.088799\n",
+      "1    1.0  3.616477\n",
+      "2    2.0  6.713796\n",
+      "3    3.0  0.077810\n",
+      "4    4.0  4.081675\n"
+     ]
+    }
+   ],
+   "source": [
+    "GROUP = [0, 10, 20, 50, 100]\n",
+    "for filename in [\"data/[1, -2, 1, 1, 1, 1, 1]qs_pis.csv\", \"data/[1, 2, -1, 1, 1, 1, 1]qs_pis.csv\"]:\n",
+    "    print(\"File: {}\".format(filename))\n",
+    "    profit_df = pd.read_csv(filename)\n",
+    "    profit_df.pi = profit_df.pi/1e7\n",
+    "    profit_df[\"group\"] = assign_groups(profit_df[\"q\"], GROUP)\n",
+    "    print(profit_df.groupby(\"group\").agg({\"pi\": \"sum\"}).reset_index())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "d492b30a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Group1 (&lt;10)</th>\n",
+       "      <th>Group2 (10-19)</th>\n",
+       "      <th>Group3 (20-49)</th>\n",
+       "      <th>Group4 (50-99)</th>\n",
+       "      <th>Group5 (≥100)</th>\n",
+       "      <th>Total</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Local</th>\n",
+       "      <td>5.11</td>\n",
+       "      <td>4.54</td>\n",
+       "      <td>9.40</td>\n",
+       "      <td>2.52</td>\n",
+       "      <td>2.21</td>\n",
+       "      <td>23.78</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Global</th>\n",
+       "      <td>5.00</td>\n",
+       "      <td>4.04</td>\n",
+       "      <td>12.76</td>\n",
+       "      <td>2.52</td>\n",
+       "      <td>2.23</td>\n",
+       "      <td>26.55</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        Group1 (<10)  Group2 (10-19)  Group3 (20-49)  Group4 (50-99)  \\\n",
+       "Local           5.11            4.54            9.40            2.52   \n",
+       "Global          5.00            4.04           12.76            2.52   \n",
+       "\n",
+       "        Group5 (≥100)  Total  \n",
+       "Local            2.21  23.78  \n",
+       "Global           2.23  26.55  "
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "profit_f = pd.DataFrame({\"Group1 (<10)\": {\"Local\": 5.11, \"Global\": 5.00},\n",
+    "              \"Group2 (10-19)\": {\"Local\": 4.54, \"Global\": 4.04},\n",
+    "              \"Group3 (20-49)\": {\"Local\": 9.40, \"Global\": 12.76},\n",
+    "              \"Group4 (50-99)\": {\"Local\": 2.52, \"Global\": 2.52},\n",
+    "              \"Group5 (≥100)\": {\"Local\": 2.21, \"Global\": 2.23}})\n",
+    "profit_f[\"Total\"] = profit_f.sum(axis=1)\n",
+    "profit_f"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "df3f9553",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Group1 (&lt;10)</th>\n",
+       "      <th>Group2 (10-19)</th>\n",
+       "      <th>Group3 (20-49)</th>\n",
+       "      <th>Group4 (50-99)</th>\n",
+       "      <th>Group5 (≥100)</th>\n",
+       "      <th>Total</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Local</th>\n",
+       "      <td>5.11</td>\n",
+       "      <td>4.41</td>\n",
+       "      <td>3.39</td>\n",
+       "      <td>2.44</td>\n",
+       "      <td>4.32</td>\n",
+       "      <td>19.67</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Global</th>\n",
+       "      <td>5.11</td>\n",
+       "      <td>4.51</td>\n",
+       "      <td>1.54</td>\n",
+       "      <td>5.18</td>\n",
+       "      <td>5.02</td>\n",
+       "      <td>21.36</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        Group1 (<10)  Group2 (10-19)  Group3 (20-49)  Group4 (50-99)  \\\n",
+       "Local           5.11            4.41            3.39            2.44   \n",
+       "Global          5.11            4.51            1.54            5.18   \n",
+       "\n",
+       "        Group5 (≥100)  Total  \n",
+       "Local            4.32  19.67  \n",
+       "Global           5.02  21.36  "
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "profit_i = pd.DataFrame({\"Group1 (<10)\": {\"Local\": 5.11, \"Global\": 5.11},\n",
+    "              \"Group2 (10-19)\": {\"Local\": 4.41, \"Global\": 4.51},\n",
+    "              \"Group3 (20-49)\": {\"Local\": 3.39, \"Global\": 1.54},\n",
+    "              \"Group4 (50-99)\": {\"Local\": 2.44, \"Global\": 5.18},\n",
+    "              \"Group5 (≥100)\": {\"Local\": 4.32, \"Global\": 5.02}})\n",
+    "profit_i[\"Total\"] = profit_i.sum(axis=1)\n",
+    "profit_i"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "ed83b480",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Group1 (&lt;10)</th>\n",
+       "      <th>Group2 (10-19)</th>\n",
+       "      <th>Group3 (20-49)</th>\n",
+       "      <th>Group4 (50-99)</th>\n",
+       "      <th>Group5 (≥100)</th>\n",
+       "      <th>Total</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Local</th>\n",
+       "      <td>2.86</td>\n",
+       "      <td>2.20</td>\n",
+       "      <td>8.54</td>\n",
+       "      <td>1.16</td>\n",
+       "      <td>0.98</td>\n",
+       "      <td>15.74</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Global</th>\n",
+       "      <td>2.28</td>\n",
+       "      <td>1.23</td>\n",
+       "      <td>8.06</td>\n",
+       "      <td>1.09</td>\n",
+       "      <td>0.98</td>\n",
+       "      <td>13.64</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        Group1 (<10)  Group2 (10-19)  Group3 (20-49)  Group4 (50-99)  \\\n",
+       "Local           2.86            2.20            8.54            1.16   \n",
+       "Global          2.28            1.23            8.06            1.09   \n",
+       "\n",
+       "        Group5 (≥100)  Total  \n",
+       "Local            0.98  15.74  \n",
+       "Global           0.98  13.64  "
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cs_f = pd.DataFrame({\"Group1 (<10)\": {\"Local\": 2.86, \"Global\": 2.28},\n",
+    "              \"Group2 (10-19)\": {\"Local\": 2.20, \"Global\": 1.23},\n",
+    "              \"Group3 (20-49)\": {\"Local\": 8.54, \"Global\": 8.06},\n",
+    "              \"Group4 (50-99)\": {\"Local\": 1.16, \"Global\": 1.09},\n",
+    "              \"Group5 (≥100)\": {\"Local\": 0.98, \"Global\": 0.98}})\n",
+    "cs_f[\"Total\"] = cs_f.sum(axis=1)\n",
+    "cs_f"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "698ad4f8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Group1 (&lt;10)</th>\n",
+       "      <th>Group2 (10-19)</th>\n",
+       "      <th>Group3 (20-49)</th>\n",
+       "      <th>Group4 (50-99)</th>\n",
+       "      <th>Group5 (≥100)</th>\n",
+       "      <th>Total</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Local</th>\n",
+       "      <td>2.86</td>\n",
+       "      <td>2.37</td>\n",
+       "      <td>2.04</td>\n",
+       "      <td>4.35</td>\n",
+       "      <td>2.81</td>\n",
+       "      <td>14.43</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Global</th>\n",
+       "      <td>2.85</td>\n",
+       "      <td>2.37</td>\n",
+       "      <td>0.42</td>\n",
+       "      <td>2.82</td>\n",
+       "      <td>2.68</td>\n",
+       "      <td>11.14</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        Group1 (<10)  Group2 (10-19)  Group3 (20-49)  Group4 (50-99)  \\\n",
+       "Local           2.86            2.37            2.04            4.35   \n",
+       "Global          2.85            2.37            0.42            2.82   \n",
+       "\n",
+       "        Group5 (≥100)  Total  \n",
+       "Local            2.81  14.43  \n",
+       "Global           2.68  11.14  "
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cs_i = pd.DataFrame({\"Group1 (<10)\": {\"Local\": 2.86, \"Global\": 2.85},\n",
+    "              \"Group2 (10-19)\": {\"Local\": 2.37, \"Global\": 2.37},\n",
+    "              \"Group3 (20-49)\": {\"Local\": 2.04, \"Global\": 0.42},\n",
+    "              \"Group4 (50-99)\": {\"Local\": 4.35, \"Global\": 2.82},\n",
+    "              \"Group5 (≥100)\": {\"Local\": 2.81, \"Global\": 2.68}})\n",
+    "cs_i[\"Total\"] = cs_i.sum(axis=1)\n",
+    "cs_i"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0d78f5d0",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6f63f7d0",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1322c9e1",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ae38793b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -800,7 +1244,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
