Add new section

--- a/welfare_groups.ipynb
+++ b/welfare_groups.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "c9d54c0f",
    "metadata": {},
    "outputs": [],
@@ -810,10 +810,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a5c642c1",
+   "id": "04923943",
    "metadata": {},
    "source": [
-    "## Tables"
+    "## Local VS Global"
    ]
   },
   {
@@ -826,7 +826,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 2,
    "id": "d492b30a",
    "metadata": {},
    "outputs": [
@@ -892,7 +892,7 @@
        "Global           2.23  26.55  "
       ]
      },
-     "execution_count": 58,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -909,7 +909,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 3,
    "id": "df3f9553",
    "metadata": {},
    "outputs": [
@@ -975,7 +975,7 @@
        "Global           5.02  21.36  "
       ]
      },
-     "execution_count": 59,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -992,9 +992,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 4,
    "id": "b10711ad",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1015,7 +1017,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\lenovo\\AppData\\Local\\Temp\\ipykernel_44500\\245102342.py:1: FutureWarning: In future versions `DataFrame.to_latex` is expected to utilise the base implementation of `Styler.to_latex` for formatting and rendering. The arguments signature may therefore change. It is recommended instead to use `DataFrame.style.to_latex` which also contains additional functionality.\n",
+      "C:\\Users\\lenovo\\AppData\\Local\\Temp\\ipykernel_58316\\245102342.py:1: FutureWarning: In future versions `DataFrame.to_latex` is expected to utilise the base implementation of `Styler.to_latex` for formatting and rendering. The arguments signature may therefore change. It is recommended instead to use `DataFrame.style.to_latex` which also contains additional functionality.\n",
       "  print(profit_f.to_latex())\n"
      ]
     }
@@ -1026,10 +1028,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 5,
    "id": "2b7ff865",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\lenovo\\AppData\\Local\\Temp\\ipykernel_58316\\2428062471.py:1: FutureWarning: In future versions `DataFrame.to_latex` is expected to utilise the base implementation of `Styler.to_latex` for formatting and rendering. The arguments signature may therefore change. It is recommended instead to use `DataFrame.style.to_latex` which also contains additional functionality.\n",
+      "  print(profit_i.to_latex())\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -1044,14 +1056,6 @@
       "\\end{tabular}\n",
       "\n"
      ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\lenovo\\AppData\\Local\\Temp\\ipykernel_44500\\2428062471.py:1: FutureWarning: In future versions `DataFrame.to_latex` is expected to utilise the base implementation of `Styler.to_latex` for formatting and rendering. The arguments signature may therefore change. It is recommended instead to use `DataFrame.style.to_latex` which also contains additional functionality.\n",
-      "  print(profit_i.to_latex())\n"
-     ]
     }
    ],
    "source": [
@@ -1060,7 +1064,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 6,
    "id": "eb13a828",
    "metadata": {},
    "outputs": [
@@ -1083,7 +1087,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\lenovo\\AppData\\Local\\Temp\\ipykernel_44500\\1403626567.py:1: FutureWarning: In future versions `DataFrame.to_latex` is expected to utilise the base implementation of `Styler.to_latex` for formatting and rendering. The arguments signature may therefore change. It is recommended instead to use `DataFrame.style.to_latex` which also contains additional functionality.\n",
+      "C:\\Users\\lenovo\\AppData\\Local\\Temp\\ipykernel_58316\\1403626567.py:1: FutureWarning: In future versions `DataFrame.to_latex` is expected to utilise the base implementation of `Styler.to_latex` for formatting and rendering. The arguments signature may therefore change. It is recommended instead to use `DataFrame.style.to_latex` which also contains additional functionality.\n",
       "  print(pd.concat([profit_f, profit_i], axis=1).sort_index(axis=1).to_latex())\n"
      ]
     }
@@ -1102,7 +1106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 7,
    "id": "ed83b480",
    "metadata": {},
    "outputs": [
@@ -1168,7 +1172,7 @@
        "Global           0.98  13.64  "
       ]
      },
-     "execution_count": 63,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1185,7 +1189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 8,
    "id": "698ad4f8",
    "metadata": {},
    "outputs": [
@@ -1251,7 +1255,7 @@
        "Global           2.68  11.14  "
       ]
      },
-     "execution_count": 64,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1268,9 +1272,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 9,
    "id": "378a904c",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1291,7 +1297,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\lenovo\\AppData\\Local\\Temp\\ipykernel_44500\\3812558370.py:1: FutureWarning: In future versions `DataFrame.to_latex` is expected to utilise the base implementation of `Styler.to_latex` for formatting and rendering. The arguments signature may therefore change. It is recommended instead to use `DataFrame.style.to_latex` which also contains additional functionality.\n",
+      "C:\\Users\\lenovo\\AppData\\Local\\Temp\\ipykernel_58316\\3812558370.py:1: FutureWarning: In future versions `DataFrame.to_latex` is expected to utilise the base implementation of `Styler.to_latex` for formatting and rendering. The arguments signature may therefore change. It is recommended instead to use `DataFrame.style.to_latex` which also contains additional functionality.\n",
       "  print(cs_f.to_latex())\n"
      ]
     }
@@ -1302,9 +1308,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 10,
    "id": "44ff24d9",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1325,7 +1333,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\lenovo\\AppData\\Local\\Temp\\ipykernel_44500\\1769770915.py:1: FutureWarning: In future versions `DataFrame.to_latex` is expected to utilise the base implementation of `Styler.to_latex` for formatting and rendering. The arguments signature may therefore change. It is recommended instead to use `DataFrame.style.to_latex` which also contains additional functionality.\n",
+      "C:\\Users\\lenovo\\AppData\\Local\\Temp\\ipykernel_58316\\1769770915.py:1: FutureWarning: In future versions `DataFrame.to_latex` is expected to utilise the base implementation of `Styler.to_latex` for formatting and rendering. The arguments signature may therefore change. It is recommended instead to use `DataFrame.style.to_latex` which also contains additional functionality.\n",
       "  print(cs_i.to_latex())\n"
      ]
     }
@@ -1336,7 +1344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 11,
    "id": "8e6e24bf",
    "metadata": {},
    "outputs": [
@@ -1359,7 +1367,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\lenovo\\AppData\\Local\\Temp\\ipykernel_44500\\1699107092.py:1: FutureWarning: In future versions `DataFrame.to_latex` is expected to utilise the base implementation of `Styler.to_latex` for formatting and rendering. The arguments signature may therefore change. It is recommended instead to use `DataFrame.style.to_latex` which also contains additional functionality.\n",
+      "C:\\Users\\lenovo\\AppData\\Local\\Temp\\ipykernel_58316\\1699107092.py:1: FutureWarning: In future versions `DataFrame.to_latex` is expected to utilise the base implementation of `Styler.to_latex` for formatting and rendering. The arguments signature may therefore change. It is recommended instead to use `DataFrame.style.to_latex` which also contains additional functionality.\n",
       "  print(pd.concat([cs_f, cs_i], axis=1).sort_index(axis=1).to_latex())\n"
      ]
     }
@@ -1378,7 +1386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 12,
    "id": "6f63f7d0",
    "metadata": {},
    "outputs": [
@@ -1444,7 +1452,7 @@
        "Global           3.21  40.19  "
       ]
      },
-     "execution_count": 67,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1456,7 +1464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 13,
    "id": "1322c9e1",
    "metadata": {},
    "outputs": [
@@ -1522,7 +1530,7 @@
        "Global           7.70   32.5  "
       ]
      },
-     "execution_count": 68,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1534,7 +1542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 14,
    "id": "ae38793b",
    "metadata": {},
    "outputs": [
@@ -1557,7 +1565,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\lenovo\\AppData\\Local\\Temp\\ipykernel_44500\\326451680.py:1: FutureWarning: In future versions `DataFrame.to_latex` is expected to utilise the base implementation of `Styler.to_latex` for formatting and rendering. The arguments signature may therefore change. It is recommended instead to use `DataFrame.style.to_latex` which also contains additional functionality.\n",
+      "C:\\Users\\lenovo\\AppData\\Local\\Temp\\ipykernel_58316\\326451680.py:1: FutureWarning: In future versions `DataFrame.to_latex` is expected to utilise the base implementation of `Styler.to_latex` for formatting and rendering. The arguments signature may therefore change. It is recommended instead to use `DataFrame.style.to_latex` which also contains additional functionality.\n",
       "  print(sw_f.to_latex())\n"
      ]
     }
@@ -1568,7 +1576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 15,
    "id": "65a1f027",
    "metadata": {},
    "outputs": [
@@ -1591,7 +1599,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\lenovo\\AppData\\Local\\Temp\\ipykernel_44500\\1522797659.py:1: FutureWarning: In future versions `DataFrame.to_latex` is expected to utilise the base implementation of `Styler.to_latex` for formatting and rendering. The arguments signature may therefore change. It is recommended instead to use `DataFrame.style.to_latex` which also contains additional functionality.\n",
+      "C:\\Users\\lenovo\\AppData\\Local\\Temp\\ipykernel_58316\\1522797659.py:1: FutureWarning: In future versions `DataFrame.to_latex` is expected to utilise the base implementation of `Styler.to_latex` for formatting and rendering. The arguments signature may therefore change. It is recommended instead to use `DataFrame.style.to_latex` which also contains additional functionality.\n",
       "  print(sw_i.to_latex())\n"
      ]
     }
@@ -1602,7 +1610,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 16,
    "id": "a7a40fa8",
    "metadata": {},
    "outputs": [
@@ -1625,7 +1633,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\lenovo\\AppData\\Local\\Temp\\ipykernel_44500\\2057224701.py:1: FutureWarning: In future versions `DataFrame.to_latex` is expected to utilise the base implementation of `Styler.to_latex` for formatting and rendering. The arguments signature may therefore change. It is recommended instead to use `DataFrame.style.to_latex` which also contains additional functionality.\n",
+      "C:\\Users\\lenovo\\AppData\\Local\\Temp\\ipykernel_58316\\2057224701.py:1: FutureWarning: In future versions `DataFrame.to_latex` is expected to utilise the base implementation of `Styler.to_latex` for formatting and rendering. The arguments signature may therefore change. It is recommended instead to use `DataFrame.style.to_latex` which also contains additional functionality.\n",
       "  print(pd.concat([sw_f, sw_i], axis=1).sort_index(axis=1).to_latex())\n"
      ]
     }
@@ -1644,7 +1652,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 17,
    "id": "5c3262a0",
    "metadata": {},
    "outputs": [],
@@ -1661,7 +1669,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 18,
    "id": "393db4f1",
    "metadata": {},
    "outputs": [
@@ -1753,7 +1761,7 @@
        "4   Local    Social Welfare      f  39.52  Group1 (<10)   7.97"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1769,7 +1777,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 19,
    "id": "28dd4a95",
    "metadata": {},
    "outputs": [
@@ -1819,7 +1827,7 @@
     "\n",
     "plt.legend(title=\"Price Contract\");\n",
     "\n",
-    "counter_fi.savefig(\"fig/counter_groups.svg\", dpi=400)"
+    "counter_fi.savefig(\"fig/counter_lc_vs_gb.svg\", dpi=400)"
    ]
   },
   {
@@ -1833,9 +1841,41 @@
    "source": []
   },
   {
+   "cell_type": "markdown",
+   "id": "052edf3f",
+   "metadata": {},
+   "source": [
+    "## Comparison (3)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4fb05de3",
+   "id": "f4551f7a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d36e8f8c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "66bcb674",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b73b6f87",
    "metadata": {},
    "outputs": [],
    "source": []
