--- a/op_pricing_fig.ipynb
+++ b/op_pricing_fig.ipynb
@@ -43,7 +43,7 @@
    "id": "459fdad4",
    "metadata": {},
    "source": [
-    "### Positive Relationship between $v$ and $\\bar{q}$"
+    "# Positive Relationship between $v$ and $\\bar{q}$"
    ]
   },
   {
@@ -117,7 +117,7 @@
    "id": "db201953",
    "metadata": {},
    "source": [
-    "### Negative Relationship between $v$ and $\\bar{q}$"
+    "# Negative Relationship between $v$ and $\\bar{q}$"
    ]
   },
   {
@@ -291,7 +291,7 @@
    "id": "a90cf387",
    "metadata": {},
    "source": [
-    "### Special Example"
+    "# Special Example"
    ]
   },
   {
@@ -299,7 +299,7 @@
    "id": "aaa73144",
    "metadata": {},
    "source": [
-    "#### 2 Subplots"
+    "## 2 Subplots"
    ]
   },
   {
@@ -422,7 +422,7 @@
    "id": "57105206",
    "metadata": {},
    "source": [
-    "#### 4 Subplots"
+    "## 4 Subplots"
    ]
   },
   {
